# allegro_hand_linux_v4

./: README.md
grasp/: CMakeLists.txt  RockScissorsPaper.cpp  RockScissorsPaper.h  main.cpp
